WebCore:

2009-02-24  Sam Weinig  <sam@webkit.org>

        Reviewed by David Hyatt.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=23990
        Regression (r40837): JavaScript image popup doesn't work

        Make the getClientRects and getBoundingClientRect methods return rects
        relative to the viewport.

        Test: fast/dom/getBoundingClientRect-getClientRects-relative-to-viewport.html

        * dom/Element.cpp:
        (WebCore::Element::getClientRects):
        (WebCore::Element::getBoundingClientRect):

LayoutTests:

2009-02-24  Sam Weinig  <sam@webkit.org>

        Reviewed by David Hyatt.

        Test for https://bugs.webkit.org/show_bug.cgi?id=23990
        Regression (r40837): JavaScript image popup doesn't work

        * fast/dom/getBoundingClientRect-getClientRects-relative-to-viewport-expected.txt: Added.
        * fast/dom/getBoundingClientRect-getClientRects-relative-to-viewport.html: Added.



Canonical link: https://commits.webkit.org/33282@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41207 268f45cc-cd09-0410-ab3c-d52691b4dbfc